// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Endpoint the requestConfig will return default config 1`] = `
Object {
  "baseURL": "http://localhost",
  "headers": Object {},
  "method": "get",
  "paramsSerializer": [Function],
  "url": "test/path",
}
`;

exports[`Endpoint the requestConfig will return passed baseURL and paramsSerializer 1`] = `
Object {
  "baseURL": "https://example.com",
  "headers": Object {},
  "method": "PATCH",
  "paramsSerializer": [Function],
  "url": "test/path",
}
`;
